initial 1.18.2 port